@@ -24,7 +24,8 @@
 - Fix: [#25854] When a guest is at 0 happiness or energy, the game draws too big of a bar in the guest stats window.
 - Fix: [#25862] Diagonal and inclined brakes are not counted when calculating upkeep cost.
 - Fix: [#25873] Repainting a banner in OpenRCT2-specific colours results in an error message.
-- Fix: [#25879] Guest window viewport doesn’t follow vehicle when they board a ride. 
+- Fix: [#25879] Guest window viewport doesn’t follow vehicle when they board a ride.
+- Fix: [#25908] Crash from use-after-free in banner text formatting during multithreaded rendering. 
 - Fix: [objects#419] Alignment of RCT2 red, yellow and green queue previews is off.
 - Fix: [objects#424] Jet Aeroplane decor has a hole in it.
 - Fix: [objects#425] Capacity of ‘Blob from outer space ride’ is incorrectly listed.
